--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link " href="sudoku.html">Sudoku Puzzles<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item research">
-                <a class="nav-link disabled" href="#">Research</a>
+                <a class="nav-link " href="research.html">Research</a>
             </li>
             <li class="nav-item classwork">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Classwork</a>
