--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Connor Rhoades">
     <link rel="icon" href="../../../../favicon.ico">
-    <title>Sudoku Puzzles</title>
+    <title>Home</title>
     
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">
 
@@ -23,11 +23,11 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item sudoku">
+                <li class="nav-item home">
                     <a class="nav-link " href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item research">
-                    <a class="nav-link " href="research.html">Research</a>
+                <li class="nav-item sudoku">
+                    <a class="nav-link " href="sudoku.html">Sudoku Puzzle</a>
                 </li>
                 <li class="nav-item classwork">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Classwork</a>
@@ -46,7 +46,6 @@
             </ul>
         </div>
     </nav>
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
