Add the ML project

--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
         <!--/.research-->
 
         <div id="projects">
-            <h1>Projects Section</h1>
+            <h1>Projects</h1>
             <div id="projects-container">           
                 <div id="bot-project">
                     <div id="github-link">
-                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/Playtime-Bot">
+                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/Playtime-Bot"
+                            target="_blank">
                             <span class="fa fa-github"></span>
                         </a>
                     </div>
@@ -182,7 +183,7 @@
                 </div>
                 <div id="sudoku-project">
                     <div id="github-link">
-                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/SudokuPuzzle">
+                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/SudokuPuzzle"  target="_blank">
                         <span class="fa fa-github"></span>
                         </a>
                     </div>
@@ -202,7 +203,7 @@
                 </div>
                 <div id="react-calc-project">
                     <div id="github-link">
-                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/React_Calculator">
+                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/React_Calculator"  target="_blank">
                         <span class="fa fa-github"></span>
                         </a>    
                     </div>
@@ -219,14 +220,21 @@
                 </div>
                 <div id="ml-project">
                     <div id="github-link">
-                        <a class="btn btn-social-icon btn-github" href="#">
+                        <a class="btn btn-social-icon btn-github" href="https://github.com/clrhoades1/ML_Teaching_Ratings_Exploration" target="_blank">
                         <span class="fa fa-github"></span>
                         </a>    
                     </div>
-                    <h4 id="ml-title">Upcoming ML Project</h4>
+                    <h4 id="ml-title">Teacher Ratings Exploration</h4>
                     <div id="ml-description">
-                        <p id="ml-description-text-style">Description</p>
+                        <p id="ml-description-text-style">In my final assignment for Machine Learning, I explore some different models for predicting teaching ratings.
+                        </p>
                     </div>
+                    <footer id="ml-technologies">
+                        <ul>
+                            <li>Python</li>
+                            <li>SciKit</li>
+                        </ul>
+                    </footer>
                 </div>
             </div>
         </div>
